--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 # spring.jpa.show-sql=true - Show SQL queries in logs
+
+spring.liquibase.enabled=false
+
+#spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
+#spring.liquibase.contexts=dev
