--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <logback-classic.version>1.5.17</logback-classic.version>
         <springdoc.version>2.3.0</springdoc.version>
         <liquibase.version>4.31.1</liquibase.version>
+        <postgresql.version>42.7.5</postgresql.version>
     </properties>
     <dependencies>
         <dependency>
@@ -46,6 +47,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
         <dependency>
@@ -105,7 +110,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.7.5</version>
+            <version>${postgresql.version}</version>
             <scope>runtime</scope>
         </dependency>
 
