--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,13 @@ spring.liquibase.enabled=false
 #spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
 #spring.liquibase.contexts=dev
+
+######MAIL#######
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.smtp.starttls.enabled=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
