--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.liquibase.enabled=false
 
 #spring.liquibase.contexts=dev
 
-######MAIL#######
+######GMAIL#######
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=
@@ -39,3 +39,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.smtp.starttls.enabled=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
+
+#######FILEUPLOAD##########
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+file.upload=/Users/entwickler/Downloads/MedicalApp/uploadFile
